[tool.poetry]
name = "unified-sqlite-to-png"
version = "0.1.0"
description = ""
authors = ["konstantin <konstantin.dudersky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.5"
plotly = "^5.5.0"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
